--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build-main:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -26,4 +26,31 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: trinketer22/func_docker:test_build
+
+  build-slim:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: DH Login
+        uses: docker/login-action@v2
+        with:
+          username: ${{secrets.DOCKERHUB_USERNAME}}
+          password: ${{secrets.DOCKERHUB_TOKEN}}
+
+      - name: Update main
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: Slim
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: trinketer22/func_docker:test_slim
+
+
 
