Fix workflow format

--- a/.github/workflows/check_toncli.yml
+++ b/.github/workflows/check_toncli.yml
@@ -9,13 +9,13 @@ jobs:
       update_required: ${{steps.check.outputs.update}}
     steps:
       - id: prev
-      - name: Check previous
-        uses: actions/download-artifact@master
+        name: Check previous
+        uses: actions/download-artifact@v3
         with:
           name: prev-commit
           path: prev-commit.txt
       - id: check
-      - name: Check commit
+        name: Check commit
         run: |
           $cur_commit  = $(git ls-remote https://github.com/disintar/toncli master | awk '{print $1}')
           $prev_commit = $(cat prev-commit.txt)
