--- a/.github/workflows/check_toncli.yml
+++ b/.github/workflows/check_toncli.yml
@@ -34,10 +34,12 @@ jobs:
   trigger-update:
     runs-on: ubuntu-latest
     needs: [check-commit]
-    if: ${{ needs.check-commit.update_required != Null }}
+    if: ${{ needs.check-commit.update_required != ''}}
     steps:
       - name: Save prev
-        run: echo ${{needs.check-commit.update_required}} > prev_commit.txt
+        run: | 
+          echo ${{needs.check-commit.update_required}}
+          echo ${{needs.check-commit.update_required}} > prev_commit.txt
       - name: Upload prev
         uses: actions/upload-artifact@v3
         with:
