--- a/.github/workflows/check_toncli.yml
+++ b/.github/workflows/check_toncli.yml
@@ -34,6 +34,7 @@ jobs:
   trigger-update:
     runs-on: ubuntu-latest
     needs: [check-commit]
+    if: ${{ success() }}
     steps:
       - name: Save prev
         run: | 
