--- a/.github/workflows/check_toncli.yml
+++ b/.github/workflows/check_toncli.yml
@@ -33,8 +33,8 @@ jobs:
           [ "${cur_commit}" == "{$prev_commit}" ] && echo "No update" || echo "update=${cur_commit}" >> $GITHUB_OUTPUT 
   trigger-update:
     runs-on: ubuntu-latest
-    needs: [check-commit]
-    if: ${{ success() }}
+    needs: [download-prev, check-commit]
+    if: ${{ always() }}
     steps:
       - name: Save prev
         run: | 
