--- a/.github/workflows/check_toncli.yml
+++ b/.github/workflows/check_toncli.yml
@@ -34,7 +34,7 @@ jobs:
   trigger-update:
     runs-on: ubuntu-latest
     needs: [download-prev, check-commit]
-    if: ${{ needs.check-commit.update }}
+    if: ${{ always() }}
     steps:
       - name: Save prev
         run: | 
