--- a/.github/workflows/check_toncli.yml
+++ b/.github/workflows/check_toncli.yml
@@ -19,7 +19,7 @@ jobs:
   check-commit:
     runs-on: ubuntu-latest
     outputs:
-      update_required: ${{steps.check.outputs.update}}
+      update: ${{steps.check.outputs.update}}
     if: ${{ always() }}
     needs: [download-prev]
     steps:
@@ -27,13 +27,13 @@ jobs:
         name: Check commit
         run: |
           cur_commit=$(git ls-remote https://github.com/disintar/toncli master | awk '{print $1}')
-          prev_commit="${{ needs.download-prev.prev}}"
+          prev_commit="${{needs.download-prev.prev}}"
           echo $prev_commit
           echo $cur_commit
           [ "${cur_commit}" == "{$prev_commit}" ] && echo "No update" || echo "update=${cur_commit}" >> $GITHUB_OUTPUT 
   trigger-update:
     runs-on: ubuntu-latest
-    needs: [download-prev, check-commit]
+    needs: [check-commit]
     if: ${{ always() }}
     steps:
       - name: Save prev
