--- a/.github/workflows/check_toncli.yml
+++ b/.github/workflows/check_toncli.yml
@@ -32,7 +32,7 @@ jobs:
   trigger-update:
     runs-on: ubuntu-latest
     needs: [check-commit]
-    if: ${{ always() }}
+    if: ${{needs.check-commit.outputs.update != "" }}
     steps:
       - name: Save prev
         run: | 
