--- a/.github/workflows/check_toncli.yml
+++ b/.github/workflows/check_toncli.yml
@@ -2,44 +2,24 @@ name: "Check toncli"
 on:
   workflow_dispatch:
 jobs:
-  download-prev:
-    runs-on: ubuntu-latest
-    outputs:
-      prev: ${{steps.prev.output.prev_commit}}
-    steps:
-      - id: prev
-        name: Check previous
-        uses: actions/download-artifact@v3
-        with:
-          name: prev_commit
-          path: prev_commit.txt
-      - name: Prev output
-        run: echo "prev=$(cat prev_commit.txt)" >> $GITHUB_OUTPUT
-        
+       
   check-commit:
     runs-on: ubuntu-latest
     outputs:
       update: ${{steps.check.outputs.update}}
-    if: ${{ always() }}
-    needs: [download-prev]
     steps:
+      - id: cache
+        name: Check cache
+        uses: actions/cache@v3
+        with:
+          path: prev_commit.txt
+          key: prev_commit
+      - id: load_prev:
+        run: |
+          ${{steps.cache.outputs.cache-hit}} && echo "prev=$(cat prev_commit.txt)" >> $GITHUB_OUTPUT || echo "Cache not hit"
       - id: check
         name: Check commit
         run: |
           cur_commit=$(git ls-remote https://github.com/disintar/toncli master | awk '{print $1}')
-          prev_commit="${{needs.download-prev.prev}}"
+          prev_commit="${{steps.load_prev.outputs.prev}}"
           [ "${cur_commit}" == "${prev_commit}" ] && echo "No update" || echo "update=${cur_commit}" >> $GITHUB_OUTPUT 
-  trigger-update:
-    runs-on: ubuntu-latest
-    needs: [check-commit]
-    if: "${{needs.check-commit.outputs.update != '' }}"
-    steps:
-      - name: Save prev
-        run: | 
-          echo ${{needs.check-commit.outputs.update}}
-          echo ${{needs.check-commit.outputs.update}} > prev_commit.txt
-      - name: Upload prev
-        uses: actions/upload-artifact@v3
-        with:
-          name: prev_commit
-          path: prev_commit.txt
