--- a/.github/workflows/check_toncli.yml
+++ b/.github/workflows/check_toncli.yml
@@ -4,8 +4,6 @@ on:
 jobs:
   check-commit:
     runs-on: ubuntu-latest
-    outputs:
-      update: ${{steps.check.outputs.update}}
     steps:
       - id: cache
         name: Check cache
@@ -23,4 +21,4 @@ jobs:
         run: |
           cur_commit=$(git ls-remote https://github.com/disintar/toncli master | awk '{print $1}')
           prev_commit="${{steps.load_prev.outputs.prev}}"
-          [ "${cur_commit}" == "${prev_commit}" ] && echo "No update" || echo "update=${cur_commit}" >> $GITHUB_OUTPUT 
+          [ "${cur_commit}" == "${prev_commit}" ] && echo "No update" || echo "update=${cur_commit}" > prev_commit.txt
