--- a/.github/workflows/check_toncli.yml
+++ b/.github/workflows/check_toncli.yml
@@ -19,6 +19,7 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         name: Update commit
         run: echo ${{steps.toncli_cur.outputs.commit}} > prev_commit.txt
+
       - name: Trigger update toncli
         if: steps.cache.outputs.cache-hit != 'true'
-        run: curl -X POST -H -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{secrets.GITHUB_TOKEN}}" https://api.github.com/repos/Trinketer22/func_docker/actions/workflows/test.yml/dispatches
+        run: curl -X POST -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{secrets.GITHUB_TOKEN}}" https://api.github.com/repos/Trinketer22/func_docker/actions/workflows/test.yml/dispatches
