--- a/.github/workflows/check_toncli.yml
+++ b/.github/workflows/check_toncli.yml
@@ -4,6 +4,11 @@ on:
 jobs:
   check-commit:
     runs-on: ubuntu-latest
+    env:
+      API_URL: "https://api.github.com/repos/Trinketer22/func_docker/actions/workflows/test.yml/dispatches"
+      HEADER_BEARER: "Authorization: Bearer ${{secrets.GITHUB_TOKEN}}"
+      HEADER_ACCEPT: "Accept: application/vnd.github+json"
+      BRANCH_REF: '{"ref":"update_toncli"}'
     steps:
       - id: toncli_cur
         name: Current commit
@@ -22,4 +27,4 @@ jobs:
 
       - name: Trigger update toncli
         if: steps.cache.outputs.cache-hit != 'true'
-        run: curl -X POST -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{secrets.GITHUB_TOKEN}}" "https://api.github.com/repos/Trinketer22/func_docker/actions/workflows/test.yml/dispatches"
+        run: curl -X POST -H  $HEADER_ACCEPT -H $HEADER_BEARER $API_URL -d $BRANCH_REF  
