--- a/.github/workflows/check_toncli.yml
+++ b/.github/workflows/check_toncli.yml
@@ -4,6 +4,8 @@ on:
 jobs:
   check-commit:
     runs-on: ubuntu-latest
+    permissions:
+      actions: write
     steps:
       - id: toncli_cur
         name: Current commit
