--- a/.github/workflows/check_toncli.yml
+++ b/.github/workflows/check_toncli.yml
@@ -26,7 +26,7 @@ jobs:
 
         env:
           API_URL: "https://api.github.com/repos/Trinketer22/func_docker/actions/workflows/test.yml/dispatches"
-          HEADER_BEARER: "Authorization: Bearer ${{secrets.GITHUB_TOKEN}}"
+          HEADER_BEARER: "Authorization: Bearer ${{secrets.UPDATE_TOKEN}}"
           BRANCH_REF: '{"ref":"update_toncli"}'
           HEADER_ACCEPT: "Accept: application/vnd.github+json"
 
