Docker action tag switch
More specific arm version

--- a/.github/workflows/full_build.yml
+++ b/.github/workflows/full_build.yml
@@ -24,7 +24,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64,linux/arm64/v8
           push: true
-          tags: trinketer22/func_docker:test_full
+          tags: trinketer22/func_docker:latest
 
